@@ -1,3 +1,10 @@
+1998-05-09  Markus Wuebben  <markus@kde.org>
+
+	* kmsettings.cpp (KMAccountSettings):
+	Fixed "Delete mail from server". The row was to low.
+	* kmmainwin.cpp
+	Added a single account mail check option.
+
 1998-04-29  Markus Wuebben  <markus@kde.org>
 
 	* Reader: Fixed the url parsing which made kmail 
